erDiagram
  USERS ||--o{ EXPENSE_LOGS : "1人のユーザーが複数の家計記録を所持"
  CATEGORIES ||--o{ EXPENSE_LOGS : "1つのカテゴリに複数の家計記録が属する"
  COMPANIES ||--o{ STOCK_PRICES : "1つの日本企業に複数の株価データを所持"

  USERS {
    integer id PK
    string name
    string password_digest
    datetime created_at
    datetime updated_at
  }

  CATEGORIES {
    integer id PK
    string name
    string transaction_type
    datetime created_at
    datetime updated_at
  }

  EXPENSE_LOGS {
    integer id PK
    integer category_id FK
    integer user_id FK
    date date
    string item
    bigint amount
    datetime created_at
    datetime updated_at
  }

  COMPANIES {
    string code PK
    string name
    string sector_name
    datetime created_at
    datetime updated_at
  }

  STOCK_PRICES {
    integer id PK
    string company_code FK
    date date
    integer close_price
    datetime created_at
    datetime updated_at
  }